--- a/pages/style.css
+++ b/pages/style.css
@@ -39,6 +39,8 @@ ul{
 nav{
     grid-area: "NAV";
 
+    background: var(--blue-color);
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -75,6 +77,8 @@ ul{
 
 li{
     width: 100%;
+
+    background: var(--white-color);
 
     padding: 5px;
     margin: 30px 0;
