--- a/pages/style.css
+++ b/pages/style.css
@@ -92,7 +92,7 @@ li{
     font-weight: 700;
 }
 
-li:nth-child(1){
+.item-nav-selected{
     background: var(--orange-color);
     color: var(--white-color);
 }
@@ -108,4 +108,82 @@ li:active{
 
 main{
     grid-area: "Main";
+}
+
+main{
+    grid-area: MAIN;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#div-register{
+    width: 90%;
+    max-width: 700px;
+    height: 80%;
+    max-height: 700px;
+
+    border: 2px solid black;
+    border-radius: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, .5);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    gap: 25px;
+
+    padding: 0 0 50px 0;
+}
+
+#div-header-on-register{
+    width: 100%;
+    height: 200px;
+
+    background: var(--blue-color);
+    color: var(--white-color);
+
+    margin-bottom: 40px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding-top: 30px;
+}
+
+h1{
+    font-size: 72px;
+}
+
+input{
+    width: 80%;
+    height: 80px;
+
+    padding: 20px;
+
+    border-radius: 10px;
+
+    font-size: 24px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+input:focus{
+    outline: 0;
+}
+
+button{
+    width: 200px;
+    height: 50px;
+
+    background: var(--red-color);
+    color: var(--white-color);
+
+    border: 2px solid black;
+    border-radius: 50px;
+
+    font-weight: bolder;
+    font-size: 22px;
 }
